2007-08-26  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Import changes from...
	* Makefile.gnulib: ...this autogenerated file.
	* getdelim.c, getline.c, stdio_.h, yesno.c: Update from GNULIB.
	* getdelim.h, getline.h: Remove obsolete files.

2007-08-24  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Import automated changes from...
	* Makefile.gnulib: ...here.
	* dirchownmod.c, lchmod.h, mkancesdirs.c, mkancesdirs.h, mkdir-p.c,
	mkdir-p.h, quote.c, quote.h, raise.c, savewd.c, savewd.h: New files
	from GNULIB.

2007-08-23  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Import automated changes from...
	* Makefile.gnulib: ...here.
	* fseeko.c, ftello.c: Update from GNULIB.
	* lseek.c: New file from GNULIB.

2007-08-22  Derek Price  <derek@ximbiot.com>

	* Makefile.am (xreadlink): Remove module config per...
	* Makefile.gnulib: ...automated changes to this file.

	* .cvsignore: Add new generated files.
	* Makefile.am: Import automated changes from...
	* Makefile.gnulib: ...here.
	* __fpending.h, alloca_.h, asprintf.c, at-func.c, base64.c,
	canon-host.c, canonicalize.c, canonicalize.h, chdir-long.c, chown.c,
	closeout.c, closeout.h, dirname.h, dup-safer.c, dup2.c, error.c,
	exitfail.c, fcntl_.h, filenamecat.c, filenamecat.h, fnmatch.c,
	fnmatch_.h, fnmatch_loop.c, ftruncate.c, gai_strerror.c,
	getaddrinfo.c, getcwd.c, getdate.c, getdate.h, getdate.y, getdelim.c,
	getline.c, getlogin_r.c, getndelim2.c, getopt_.h, getpagesize.h,
	getpass.c, gettext.h, gettime.c, gettimeofday.c, glob-libc.h, glob.c,
	glob_.h, inttypes_.h, lchown.c, lstat.c, mbchar.c, mbchar.h,
	mempcpy.c, memrchr.c, mkstemp.c, mbuiter.h, mktime.c, nanosleep.c,
	openat-priv.h, openat.c, openat.h, printf-args.c, printf-args.h,
	printf-parse.c, printf-parse.h, quotearg.c, quotearg.h, readlink.c,
	regcomp.c, regex.h, regex_internal.c, regex_internal.h, regexec.c,
	setenv.c, setenv.h, snprintf.c, stat-macros.h, stdbool_.h, stdint_.h,
	strcasecmp.c, strdup.c, strerror.c, strftime.c, strncasecmp.c,